--- a/riskaware-app/src/style/Login.css
+++ b/riskaware-app/src/style/Login.css
@@ -59,3 +59,14 @@
     font-weight: bold;
   }
   
+  select {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    outline: none;
+  }
+  
